# computer-graphics-assigments

./: .clang_complete  .gitignore  .gitignore~  .travis.yml  CMakeLists.txt  README  README.md  REPORT.md  university-build.sh
build_release/: CTestTestfile.cmake
build_release/catch/src/catch-stamp/: catch-download-impl.cmake  catch-download.cmake  catch-urlinfo.txt  download-catch.cmake  extract-catch.cmake  verify-catch.cmake
build_release/src/cg/: CTestTestfile.cmake
build_release/src/cg/src/: CTestTestfile.cmake  libCG.so.0.0.0
build_release/src/cg/test/: CTestTestfile.cmake
build_release/src/rasteriser/: CTestTestfile.cmake
build_release/src/rasteriser/src/: CTestTestfile.cmake
build_release/src/raytracer/: CTestTestfile.cmake
build_release/src/raytracer/src/: CTestTestfile.cmake
cmake/: AddDependentSubproject.cmake  Catch.cmake  FindGLM.cmake
src/cg/: CMakeLists.txt  README.md
src/cg/include/: SDLauxiliary.hpp  debug.hpp  interpolation.hpp  projection.hpp  triangle.hpp  vertex.hpp
src/cg/include/models/: cornell_box.hpp
src/cg/src/: CMakeLists.txt  SDLauxiliary.cpp  debug.cpp  glm_operators.cpp  interpolation.cpp  projection.cpp  triangle.cpp
src/cg/src/models/: cornell_box.cpp
src/cg/test/: CMakeLists.txt
src/cg/test/tests/: interpolation.cpp  projection.cpp  rescale.cpp
src/rasteriser/: CMakeLists.txt
src/rasteriser-extensions/: CMakeLists.txt
src/rasteriser-extensions/src/: CMakeLists.txt  cornell_box_reversed.cpp  cornell_box_reversed.hpp  rasteriser.cpp  vertex_attributes.cpp  vertex_attributes.hpp
src/rasteriser/src/: CMakeLists.txt  rasteriser.cpp
src/raytracer/: CMakeLists.txt
src/raytracer-extensions/: CMakeLists.txt
src/raytracer-extensions/src/: CMakeLists.txt  PixelCoordinate.hpp  intersection.hpp  raytracer.cpp
src/raytracer/src/: CMakeLists.txt  PixelCoordinate.cpp  PixelCoordinate.hpp  intersection.hpp  raytracer.cpp
