file(GLOB_RECURSE LIB_HEADERS RELATIVE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ../include/*.hpp
    ../include/*.h
)

file(GLOB_RECURSE LIB_SOURCES RELATIVE
    ${CMAKE_CURRENT_SOURCE_DIR}
    *.cpp
)

add_library(${LIBRARY_NAME} SHARED ${LIB_SOURCES})

set_target_properties(${LIBRARY_NAME} PROPERTIES
    VERSION ${VERSION}
    FRAMEWORK FALSE
    PUBLIC_HEADER "${LIB_HEADERS}"
)

install(TARGETS ${LIBRARY_NAME}
    EXPORT ${PROJECT_NAME}Targets
    ARCHIVE DESTINATION lib COMPONENT libs
    RUNTIME DESTINATION bin COMPONENT libs
    LIBRARY DESTINATION lib COMPONENT libs
    FRAMEWORK DESTINATION bin COMPONENT libs
    PUBLIC_HEADER DESTINATION include/${PROJECT_NAME} COMPONENT devel
    INCLUDES DESTINATION include
)
